tests/fixtures/security/certs/invalid/broken_chain.eval
subject_fingerprint=4444444444444444444444444444444444444444444444444444444444444444
validation_time_utc=2026-03-11T08:30:00Z
revocation_policy=require_good
